# socha-rust-core

./: Cargo.toml  README.md
.github/workflows/: release.yaml
src/: api.rs
src/api/: game_client.rs  game_client_test.rs  protocol.rs  protocol_test.rs  xml_buffer.rs  xml_buffer_test.rs
